feature/rename: fix issue

--- a/locales/tr.toml
+++ b/locales/tr.toml
@@ -3,7 +3,7 @@ validation_min_length = "{{.Field}} alanı en az {{.Param}} karakter uzunluğund
 validation_max_length = "{{.Field}} alanı en fazla {{.Param}} karakter uzunluğunda olmalıdır."
 validation_min = "{{.Field}} alanı en az {{.Param}} olmalıdır."
 validation_max = "{{.Field}} alanı en fazla {{.Param}} olmalıdır."
-validation_email = "Bu alan geçerli bir e-posta adresi olmalıdır."
+validation_email = "Bu alan geçerli bir e-listinga adresi olmalıdır."
 validation_unique = "Bu alan benzersiz olmalıdır."
 validation_phone = "Bu alan geçerli bir telefon numarası olmalıdır."
 validation_password = "Bu alan en az bir büyük harf, bir küçük harf, bir sayı ve bir özel karakter içermelidir."
